hphp/test/slow/inout/bad-arg-this.php.expectf
Fatal error: You cannot decorate this argument as `inout` in %s on line 8
